@@ -21,7 +21,6 @@ var (
 		memprof            string
 		lockfile           string
 		diagnosticInterval int
-		validate           bool
 	}
 )
 
