@@ -8,6 +8,7 @@ Release Notes - Flume - Version v0.5.0.rc
     . replication from local logs to remote via TCP(compression TODO)
     . init.d script added
     . cardinality output uses gob to checkpoint state between restarts
+    . config file validation and visualization[dpconf]
 
 ** Improvement
 
